# Moonboard-ML

./: README.md  generative_models.py  hold_embeddings.py  kl_div_loss.py  main.py  models.py  pre_process.py  predictions_models.py  pyproject.toml  testing_generative_models.py  testing_saved_models.py
generative_models/: gans.py  tranformer_decoder.py  vaes.py
prediction_models/: cnns.py  deep_set.py
saved_models/: one_channel_cnn_mse
scripts/: autoencoder_cnn1.py  deep_set.py  multi_channel_cnn_main.py  one_channel_cnn_main.py  one_channel_cnn_mse.py  one_hot_cnn_main.py  transformer_main.py  vae_conv_1chan.py  vae_deep_set.py
