[tool.poetry]
name = "moonboard-ml"
version = "0.1.0"
description = ""
authors = ["Alex Abbey <alexabbey4@gmail.com>"]
readme = "README.md"
packages = [{include = "moonboard_ml"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
